name:                BrainFlip
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SvenWille/BrainFlip#readme
license:             BSD3
license-file:        LICENSE
author:              SvenWille
maintainer:          example@example.com
copyright:           Sven Wille
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BrainFlip.Repl,
                       BrainFlip.Interpreter
  build-depends:       base >= 4.7 && < 5,
                       Stream,
                       haskeline,
                       extra,
                       transformers,
                       monad-loops
  default-language:    Haskell2010

executable BrainFlip-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       BrainFlip,
                       extra
  default-language:    Haskell2010

test-suite BrainFlip-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , BrainFlip
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SvenWille/BrainFlip
